-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10.0
-
None
-
6b8b8733c (dev)
-
2D Vector Graphics 42 2025
Note: this is not handled correctly by Qt LottieAnimation nor by lottietoqml
If there are multiple shape elements in the same group, they should be combined into a single path, possibly creating holes, according to the Fill's fill rule. The path direction is significant, as set by the "d" (path direction) property. Behavior matches QPainter/QPainterPath and QuickShapes/ShapePath.
Example: omg.json, the "O" letter currently has no hole.
Also the "mm" (path merge) element is related, currently unsupported.
- is required for
-
QTBUG-140736 Vector image format support in Qt
-
- Open
-